--- a/src/components/pages/navbar.css
+++ b/src/components/pages/navbar.css
@@ -202,6 +202,8 @@ nav {
     padding-left: 1.5rem;
 }
 
+
+
 .social-icons {
     display: none;
 }
@@ -244,7 +246,7 @@ nav {
 
     .links a {
         padding: 0;
-        margin: 0 0.5rem;
+        margin: 0 1rem;
     }
 
     .links a:hover {
@@ -254,15 +256,17 @@ nav {
 
     .social-icons {
         display: flex;
+
     }
 
     .social-icons a {
-        margin: 0 0.5rem;
+        font-size: 1.5rem;
+        margin: 0 1rem;
         color: var(--clr-primary-5);
         transition: var(--transition);
     }
 
     .social-icons a:hover {
-        color: var(--clr-primary-7);
+        color: var(--clr-primary-1);
     }
 }
