--- a/src/components/pages/navbar.css
+++ b/src/components/pages/navbar.css
@@ -1,55 +1,7 @@
-/*
-=============== 
-Variables
-===============
-*/
+@import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap');
 
-:root {
-    /* dark shades of primary color*/
-    --clr-primary-1: hsl(205, 86%, 17%);
-    --clr-primary-2: hsl(205, 77%, 27%);
-    --clr-primary-3: hsl(205, 72%, 37%);
-    --clr-primary-4: hsl(205, 63%, 48%);
-    /* primary/main color */
-    --clr-primary-5: hsl(205, 78%, 60%);
-    /* lighter shades of primary color */
-    --clr-primary-6: hsl(205, 89%, 70%);
-    --clr-primary-7: hsl(205, 90%, 76%);
-    --clr-primary-8: hsl(205, 86%, 81%);
-    --clr-primary-9: hsl(205, 90%, 88%);
-    --clr-primary-10: hsl(205, 100%, 96%);
-    /* darkest grey - used for headings */
-    --clr-grey-1: hsl(209, 61%, 16%);
-    --clr-grey-2: hsl(211, 39%, 23%);
-    --clr-grey-3: hsl(209, 34%, 30%);
-    --clr-grey-4: hsl(209, 28%, 39%);
-    /* grey used for paragraphs */
-    --clr-grey-5: hsl(210, 22%, 49%);
-    --clr-grey-6: hsl(209, 23%, 60%);
-    --clr-grey-7: hsl(211, 27%, 70%);
-    --clr-grey-8: hsl(210, 31%, 80%);
-    --clr-grey-9: hsl(212, 33%, 89%);
-    --clr-grey-10: hsl(210, 36%, 96%);
-    --clr-white: #fff;
-    --clr-red-dark: hsl(360, 67%, 44%);
-    --clr-red-light: hsl(360, 71%, 66%);
-    --clr-green-dark: hsl(125, 67%, 44%);
-    --clr-green-light: hsl(125, 71%, 66%);
-    --clr-black: #222;
-    --transition: all 0.3s linear;
-    --spacing: 0.1rem;
-    --radius: 0.25rem;
-    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    --max-width: 1170px;
-    --fixed-width: 620px;
-}
 
-/*
-=============== 
-Global Styles
-===============
-*/
+
 
 *,
 ::after,
@@ -60,10 +12,10 @@ Global Styles
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: var(--clr-grey-10);
-    color: var(--clr-grey-1);
+    font-family: 'Emilys Candy',
+        cursive;
+    background: hsl(210, 36%, 96%);
+    color: hsl(205, 86%, 17%);
     line-height: 1.5;
     font-size: 0.875rem;
 }
@@ -80,10 +32,12 @@ h1,
 h2,
 h3,
 h4 {
-    letter-spacing: var(--spacing);
+    letter-spacing: 0.1rem;
     text-transform: capitalize;
     line-height: 1.25;
     margin-bottom: 0.75rem;
+    font-family: 'Emilys Candy',
+        cursive;
 }
 
 h1 {
@@ -104,7 +58,7 @@ h4 {
 
 p {
     margin-bottom: 1.25rem;
-    color: var(--clr-grey-5);
+    color: hsl(210, 22%, 49%);
 }
 
 @media screen and (min-width: 800px) {
@@ -136,13 +90,13 @@ p {
     }
 }
 
-/*  global classes */
 
 /* section */
 .section {
     width: 90vw;
     margin: 0 auto;
-    max-width: var(--max-width);
+    max-width: 1170px;
+    ;
 }
 
 @media screen and (min-width: 992px) {
@@ -157,8 +111,8 @@ Navbar
 ===============
 */
 nav {
-    background: var(--clr-white);
-    box-shadow: var(--light-shadow);
+    background: #fff;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .nav-header {
@@ -170,15 +124,15 @@ nav {
 
 .nav-toggle {
     font-size: 1.5rem;
-    color: var(--clr-primary-5);
+    color: hsl(205, 78%, 60%);
     background: transparent;
     border-color: transparent;
-    transition: var(--transition);
+    transition: all 0.3s linear;
     cursor: pointer;
 }
 
 .nav-toggle:hover {
-    color: var(--clr-primary-1);
+    color: hsl(205, 86%, 17%);
     transform: rotate(90deg);
 }
 
@@ -187,18 +141,21 @@ nav {
 }
 
 .links a {
-    color: var(--clr-grey-3);
+    color: hsl(209, 34%, 30%);
+
     font-size: 1rem;
     text-transform: capitalize;
-    letter-spacing: var(--spacing);
+    letter-spacing: 0.1rem;
     display: block;
     padding: 0.5rem 1rem;
-    transition: var(--transition);
+    transition: all 0.3s linear;
+    font-family: 'Emilys Candy',
+        cursive;
 }
 
 .links a:hover {
-    background: var(--clr-primary-8);
-    color: var(--clr-primary-5);
+    background: hsl(205, 86%, 81%);
+    color: hsl(205, 78%, 60%);
     padding-left: 1.5rem;
 }
 
@@ -211,7 +168,7 @@ nav {
 .links-container {
     height: 0;
     overflow: hidden;
-    transition: var(--transition);
+    transition: all 0.3s linear;
 }
 
 .show-container {
@@ -262,11 +219,31 @@ nav {
     .social-icons a {
         font-size: 1.5rem;
         margin: 0 1rem;
-        color: var(--clr-primary-5);
-        transition: var(--transition);
+        color: hsl(205, 78%, 60%);
+        transition: all 0.3s linear;
     }
 
     .social-icons a:hover {
-        color: var(--clr-primary-1);
+        color: hsl(205, 86%, 17%);
     }
+}
+
+.aboutPic {
+    width: 350px;
+    height: 350px;
+    margin-top: 10%;
+}
+
+#about {
+    float: right;
+    margin-top: 0%;
+}
+
+.resume {
+    background-color: skyblue;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
 }
