--- a/src/components/pages/navbar.css
+++ b/src/components/pages/navbar.css
@@ -247,3 +247,89 @@ nav {
     flex-direction: column;
     justify-content: stretch;
 }
+
+/* FOR PORTFOLIO */
+.header-port {
+    min-height: 80px;
+    cursor: pointer;
+}
+
+.header-port .logo-port {
+    font-size: 3em;
+    text-transform: uppercase;
+    font-weight: 1200;
+    line-height: 80px;
+    float: left;
+    margin-left: 50px;
+
+}
+
+.header-port ul {
+    float: right;
+}
+
+.header-port ul li {
+    list-style: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 900;
+    padding: 0 20px;
+    line-height: 80px;
+    margin-right: 30px;
+
+}
+
+.header-port ul li:hover,
+.header-port ul .active {
+    background: rgb(195, 136, 230);
+}
+
+.port {
+    width: 100%;
+    padding: 10px;
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.thumb {
+    width: 24%;
+    min-width: 350px;
+    height: 400px;
+    text-align: center;
+    cursor: pointer;
+    padding: 10px;
+    /* border-style: ridge; */
+    margin: 1%;
+
+}
+
+.thumb img {
+    width: 380px;
+    height: 350px;
+    display: block;
+    object-position: top;
+    object-fit: cover;
+    align-items: center;
+}
+
+.thumb h4 {
+    font-size: 1.5rem;
+    font-weight: 900;
+    letter-spacing: 3px;
+    text-align: left;
+    line-height: 80px;
+    margin-left: 0;
+
+
+}
+
+.thumb h5 {
+    margin-top: 0px;
+    text-align: left;
+    font-family: 'Emilys Candy',
+        cursive;
+
+}
