--- a/src/components/pages/navbar.css
+++ b/src/components/pages/navbar.css
@@ -1,90 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap');
 
-*,
-::after,
-::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Emilys Candy',
-        cursive;
-    background: hsl(210, 36%, 96%);
-    color: hsl(205, 86%, 17%);
-    line-height: 1.5;
-    font-size: 0.875rem;
-}
-
 ul {
     list-style-type: none;
 }
 
 a {
     text-decoration: none;
-}
-
-h1,
-h2,
-h3,
-h4 {
-    letter-spacing: 0.1rem;
-    text-transform: capitalize;
-    line-height: 1.25;
-    margin-bottom: 0.75rem;
-    font-family: 'Emilys Candy',
-        cursive;
-}
-
-h1 {
-    font-size: 3rem;
-}
-
-h2 {
-    font-size: 2rem;
-}
-
-h3 {
-    font-size: 1.25rem;
-}
-
-h4 {
-    font-size: 0.875rem;
-}
-
-p {
-    margin-bottom: 1.25rem;
-    color: hsl(210, 22%, 49%);
-}
-
-@media screen and (min-width: 800px) {
-    h1 {
-        font-size: 4rem;
-    }
-
-    h2 {
-        font-size: 2.5rem;
-    }
-
-    h3 {
-        font-size: 1.75rem;
-    }
-
-    h4 {
-        font-size: 1rem;
-    }
-
-    body {
-        font-size: 1rem;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4 {
-        line-height: 1;
-    }
 }
 
 .section {
@@ -101,12 +22,18 @@ p {
 }
 
 /*
-=============== 
+============================== 
 Navbar
-===============
+==============================
 */
+
+.nav-header h3 {
+    font-family: 'Emilys Candy',
+        cursive;
+}
+
 nav {
-    background: #fff;
+    background: #181818;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -153,8 +80,6 @@ nav {
     color: hsl(205, 78%, 60%);
     padding-left: 1.5rem;
 }
-
-
 
 .social-icons {
     display: none;
@@ -223,26 +148,263 @@ nav {
     }
 }
 
+
+
 /*
-=============== 
-ABOUT
-===============
+==============================
+HOME
+==============================
 */
+
+.homeBody {
+    background-color: #252627;
+    margin-bottom: 0px;
+    height: 100vh;
+}
+
+.homeContainer {
+    width: 100vw;
+    height: 30.5vh;
+    margin-bottom: 10%;
+}
+
 .aboutPic {
     width: 250px;
     height: 250px;
-    margin-top: 5%;
+    margin-top: 2%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 
 }
 
+.text h1 {
+    color: #fff;
+    font-size: 3.5rem;
+    cursor: context-menu;
+    justify-content: space-between;
+    letter-spacing: 20px;
+}
+
+.text span {
+    display: inline-block;
+    font-size: 4rem;
+    color: rgb(195, 136, 230);
+    font-family: 'Emilys Candy',
+        cursive;
+    letter-spacing: 5px;
+    /* margin-top: 10%; */
+}
+
+span:hover {
+    color: #b0daee;
+    transition: all .5s;
+}
+
+span.m-left {
+    margin-left: -3px;
+}
+
+.text p {
+    letter-spacing: 3px;
+    word-spacing: 10px;
+    font-size: 1.8rem;
+}
+
+.text a:hover {
+    color: #fff;
+}
+
+.text a::before {
+    content: '';
+    background-color: #9f82e2;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 0%;
+    z-index: -1;
+    transition: .5s;
+}
+
+.text a:hover::before {
+    height: 100%;
+}
+
+/* make the header letters shake when hoover */
+.text span:hover,
+.m-left:hover,
+.name:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
+
+.containerP {
+    padding: 0 100px 0 100px;
+}
+
+.banner-text {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.banner-text p {
+    font-family: 'Emilys Candy', cursive;
+    color: #fff;
+}
+
+.text-area h1 {
+    font-size: 3.5rem;
+    cursor: pointer;
+    font-family: 'Emilys Candy',
+        cursive;
+    justify-content: space-between;
+    letter-spacing: 12%;
+}
+
+
+.text-area span {
+    color: #fff;
+    opacity: 0;
+    transform: translate(0, -100px) rotate(360deg) scale(0);
+    animation: animate 5s forwards;
+}
+
+.text-area span {
+    display: inline-block;
+    color: #a69cbe;
+
+}
+
+.text-area span:nth-of-type(2) {
+    animation-delay: 1s;
+    color: #cdaac0;
+}
+
+.text-area span:nth-of-type(3) {
+    animation-delay: 2s;
+    color: #e8b7ca;
+}
+
+.text-area span:nth-of-type(4) {
+    animation-delay: 3s;
+
+}
+
+.text-area span:nth-of-type(5) {
+    animation-delay: 4s;
+    color: #fed6df;
+}
+
+.text-area span:nth-of-type(6) {
+    animation-delay: 5s;
+    color: #b0daee;
+}
+
+.text-area span:nth-of-type(7) {
+    animation-delay: 6s;
+    color: #a69cbe;
+}
+
+.text-area span:nth-of-type(8) {
+    animation-delay: 7s;
+
+}
+
+.text-area span:nth-of-type(9) {
+    animation-delay: 7s;
+    color: #cdaac0;
+
+}
+
+.text-area span:nth-of-type(10) {
+    animation-delay: 7s;
+    color: #e8b7ca;
+
+}
+
+@keyframes animate {
+    30% {
+        transform: translate(0, -50px) rotate(180deg) scale(1);
+    }
+
+    60% {
+        transform: translate(0, 20px) rotate(0deg) scale(0.8s);
+    }
+
+    100% {
+        transform: translate(0) rotate(0deg) scale(1);
+        opacity: 1;
+    }
+}
+
+main {
+    padding-top: 30px;
+    padding-bottom: 0%;
+}
+
+/*
+==============================
+ABOUT
+==============================
+*/
+.wrapperAbout {
+    background-color: #252627;
+}
+
 #about {
     width: 100vw;
     height: 100vh;
-    /* background-color: #a69cbe; */
-    margin-top: 2%;
+    margin-top: 0%;
 }
 
 .about {
@@ -255,12 +417,12 @@ ABOUT
 .portfolio h1 {
     font-size: 6rem;
     z-index: 0;
-    /* opacity: .1; */
     color: #a69cbe;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-
+    font-family: 'Emilys Candy',
+        cursive;
 }
 
 .about-me-info {
@@ -288,10 +450,12 @@ ABOUT
 }
 
 /*
-=============== 
+==============================
 PORTFOLIO
-===============
+==============================
 */
+
+
 .header-port {
     min-height: 80px;
     cursor: pointer;
@@ -344,7 +508,6 @@ PORTFOLIO
     text-align: center;
     cursor: pointer;
     padding: 10px;
-    /* border-style: ridge; */
     margin: 1%;
 
 }
@@ -358,32 +521,37 @@ PORTFOLIO
     align-items: center;
 }
 
-.thumb h4 {
-    font-size: 1.5rem;
-    font-weight: 900;
-    letter-spacing: 3px;
-    text-align: left;
-    line-height: 80px;
-    margin-left: 0;
-
+.thumb h5 {
+    margin-top: 0px;
+    text-align: center;
+    font-family: 'Emilys Candy',
+        cursive;
+    padding-top: 4%;
+    color: whitesmoke;
 
 }
 
-.thumb h5 {
-    margin-top: 0px;
-    text-align: left;
+.portfolio {
+    background-color: #252627;
+}
+
+.portfolio h1 {
     font-family: 'Emilys Candy',
         cursive;
-
 }
 
 
 /*
-=============== 
+==============================
 CONTACT
-===============
+==============================
 */
 
+.contact {
+    background-color: #252627;
+    padding-bottom: 5%;
+    height: 100vh;
+}
 
 .contact img {
     width: 200px;
@@ -405,199 +573,115 @@ CONTACT
 }
 
 .conCard {
-    margin: 5%;
+    /* margin: 5%; */
     box-shadow: 10px 10px 5px grey;
+    width: 230px;
+    height: 350px;
+}
 
+.contact h1 {
+    font-family: 'Emilys Candy',
+        cursive;
+}
 
-    /*
-=============== 
+.contact {
+    background-color: ;
+}
+
+/*
+==============================
 PORTFOLIO
-===============
+==============================
 */
-    .header-port {
-        min-height: 80px;
-        cursor: pointer;
-    }
 
-    .header-port .logo-port {
-        font-size: 3em;
-        text-transform: uppercase;
-        font-weight: 1200;
-        line-height: 80px;
-        float: left;
-        margin-left: 50px;
+.header-port {
+    min-height: 80px;
+    cursor: pointer;
+}
 
-    }
+.header-port .logo-port {
+    font-size: 3em;
+    text-transform: uppercase;
+    font-weight: 1200;
+    line-height: 80px;
+    float: left;
+    margin-left: 50px;
 
-    .header-port ul {
-        float: right;
-    }
+}
 
-    .header-port ul li {
-        list-style: none;
-        display: inline-block;
-        font-size: 1.5rem;
-        text-transform: uppercase;
-        font-weight: 900;
-        padding: 0 20px;
-        line-height: 80px;
-        margin-right: 30px;
+.header-port ul {
+    float: right;
+}
 
-    }
+.header-port ul li {
+    list-style: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 900;
+    padding: 0 20px;
+    line-height: 80px;
+    margin-right: 30px;
 
-    .header-port ul li:hover,
-    .header-port ul .active {
-        background: rgb(195, 136, 230);
-    }
+}
 
-    .port {
-        width: 100%;
-        padding: 10px;
-        margin-top: 30px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
+.header-port ul li:hover,
+.header-port ul .active {
+    background: rgb(195, 136, 230);
+}
 
-    .thumb {
-        width: 24%;
-        min-width: 350px;
-        height: 400px;
-        text-align: center;
-        cursor: pointer;
-        padding: 10px;
-        /* border-style: ridge; */
-        margin: 1%;
-
-    }
-
-    .thumb img {
-        width: 380px;
-        height: 350px;
-        display: block;
-        object-position: top;
-        object-fit: cover;
-        align-items: center;
-    }
-
-    .thumb h4 {
-        font-size: 1.5rem;
-        font-weight: 900;
-        letter-spacing: 3px;
-        text-align: left;
-        line-height: 80px;
-        margin-left: 0;
+.port {
+    width: 100%;
+    padding: 10px;
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
 
 
-    }
+.thumb {
+    width: 24%;
+    min-width: 350px;
+    height: 400px;
+    text-align: center;
+    cursor: pointer;
+    padding: 10px;
+    margin: 1%;
 
-    .thumb h5 {
-        margin-top: 0px;
-        text-align: left;
-        font-family: 'Emilys Candy',
-            cursive;
+}
 
-    }
+.thumb img {
+    width: 320px;
+    height: 280px;
+    display: block;
+    object-position: top;
+    object-fit: cover;
+    align-items: center;
+}
 
+.thumb h4 {
+    font-size: 1.5rem;
+    font-weight: 900;
+    letter-spacing: 3px;
+    text-align: left;
+    line-height: 80px;
+    margin-left: 0;
+}
 
-    /*
-=============== 
-PORTFOLIO
-===============
-*/
-    .header-port {
-        min-height: 80px;
-        cursor: pointer;
-    }
+.thumb h5 {
+    margin-top: 0px;
+    text-align: left;
+    font-family: 'Emilys Candy',
+        cursive;
 
-    .header-port .logo-port {
-        font-size: 3em;
-        text-transform: uppercase;
-        font-weight: 1200;
-        line-height: 80px;
-        float: left;
-        margin-left: 50px;
-
-    }
-
-    .header-port ul {
-        float: right;
-    }
-
-    .header-port ul li {
-        list-style: none;
-        display: inline-block;
-        font-size: 1.5rem;
-        text-transform: uppercase;
-        font-weight: 900;
-        padding: 0 20px;
-        line-height: 80px;
-        margin-right: 30px;
-
-    }
-
-    .header-port ul li:hover,
-    .header-port ul .active {
-        background: rgb(195, 136, 230);
-    }
-
-    .port {
-        width: 100%;
-        padding: 10px;
-        margin-top: 30px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
-
-    .thumb {
-        width: 24%;
-        min-width: 350px;
-        height: 400px;
-        text-align: center;
-        cursor: pointer;
-        padding: 10px;
-        /* border-style: ridge; */
-        margin: 1%;
-
-    }
-
-    .thumb img {
-        width: 380px;
-        height: 350px;
-        display: block;
-        object-position: top;
-        object-fit: cover;
-        align-items: center;
-    }
-
-    .thumb h4 {
-        font-size: 1.5rem;
-        font-weight: 900;
-        letter-spacing: 3px;
-        text-align: left;
-        line-height: 80px;
-        margin-left: 0;
-
-
-    }
-
-    .thumb h5 {
-        margin-top: 0px;
-        text-align: left;
-        font-family: 'Emilys Candy',
-            cursive;
-
-    }
-
-    ;
 }
 
 
 /*
-=============== 
+==============================
 RESUME
-===============
+==============================
 */
 
 .resume {
@@ -607,22 +691,26 @@ RESUME
     display: flex;
     flex-direction: column;
     justify-content: stretch;
+
+
+
 }
 
 
 
 /*
-=============== 
+==============================
 FOOTER
-===============
+==============================
 */
 
 .footer {
     text-align: center;
     padding: 3px;
-    background-color: #a69cbe;
-    color: black;
-    margin-top: 3%;
+    background-color: #181818;
+    color: rgb(194, 189, 181);
+    margin-top: 0%;
+    padding-bottom: 1%;
     font-family: 'Emilys Candy',
         cursive;
 }
