--- a/src/components/pages/navbar.css
+++ b/src/components/pages/navbar.css
@@ -58,11 +58,8 @@ nav {
     transform: rotate(90deg);
 }
 
-.logo {
-    height: 40px;
-}
 
-.links a {
+.nav-item {
     color: hsl(209, 34%, 30%);
 
     font-size: 1rem;
@@ -291,7 +288,7 @@ span.m-left {
 
 .banner-text {
     position: absolute;
-    top: 70%;
+    top: 75%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
