--- a/src/components/pages/navbar.css
+++ b/src/components/pages/navbar.css
@@ -30,6 +30,7 @@ Navbar
 .nav-header h3 {
     font-family: 'Emilys Candy',
         cursive;
+
 }
 
 nav {
@@ -44,26 +45,10 @@ nav {
     padding: 1rem;
 }
 
-.nav-toggle {
-    font-size: 1.5rem;
-    color: hsl(205, 78%, 60%);
-    background: transparent;
-    border-color: transparent;
-    transition: all 0.3s linear;
-    cursor: pointer;
-}
-
-.nav-toggle:hover {
-    color: hsl(205, 86%, 17%);
-    transform: rotate(90deg);
-}
-
-
 .nav-item {
-    color: hsl(209, 34%, 30%);
+    color: hsl(209, 59%, 69%);
 
-    font-size: 1rem;
-    text-transform: capitalize;
+    font-size: 0.8rem;
     letter-spacing: 0.1rem;
     display: block;
     padding: 0.5rem 1rem;
@@ -128,10 +113,7 @@ nav {
         background: transparent;
     }
 
-    .social-icons {
-        display: flex;
 
-    }
 
     .social-icons a {
         font-size: 1.5rem;
@@ -146,12 +128,12 @@ nav {
 }
 
 
-
 /*
 ==============================
 HOME
 ==============================
 */
+
 
 .homeBody {
     background-color: #252627;
@@ -547,7 +529,8 @@ CONTACT
 .contact {
     background-color: #252627;
     padding-bottom: 5%;
-    height: 100vh;
+    /* height: 100vh; */
+
 }
 
 .contact img {
@@ -570,10 +553,11 @@ CONTACT
 }
 
 .conCard {
-    /* margin: 5%; */
+    margin-top: 5%;
     box-shadow: 10px 10px 5px grey;
     width: 230px;
     height: 350px;
+
 }
 
 .contact h1 {
