--- a/src/components/pages/navbar.css
+++ b/src/components/pages/navbar.css
@@ -99,9 +99,9 @@ nav {
         height: auto !important;
     }
 
-    .links {
+    /* .links {
         display: flex;
-    }
+    } */
 
     .links a {
         padding: 0;
@@ -111,19 +111,6 @@ nav {
     .links a:hover {
         padding: 0;
         background: transparent;
-    }
-
-
-
-    .social-icons a {
-        font-size: 1.5rem;
-        margin: 0 1rem;
-        color: hsl(205, 78%, 60%);
-        transition: all 0.3s linear;
-    }
-
-    .social-icons a:hover {
-        color: hsl(205, 86%, 17%);
     }
 }
 
@@ -172,7 +159,6 @@ HOME
     font-family: 'Emilys Candy',
         cursive;
     letter-spacing: 5px;
-    /* margin-top: 10%; */
 }
 
 span:hover {
@@ -445,7 +431,7 @@ PORTFOLIO
     text-transform: uppercase;
     font-weight: 1200;
     line-height: 80px;
-    float: left;
+    /* float: left; */
     margin-left: 50px;
 
 }
@@ -480,6 +466,16 @@ PORTFOLIO
     justify-content: space-evenly;
 }
 
+.thumb img {
+    width: 320px;
+    height: 280px;
+    display: block;
+    object-position: top;
+    object-fit: cover;
+    align-items: center;
+}
+
+
 .thumb {
     width: 24%;
     min-width: 350px;
@@ -489,15 +485,6 @@ PORTFOLIO
     padding: 10px;
     margin: 1%;
 
-}
-
-.thumb img {
-    width: 380px;
-    height: 350px;
-    display: block;
-    object-position: top;
-    object-fit: cover;
-    align-items: center;
 }
 
 .thumb h5 {
@@ -528,8 +515,7 @@ CONTACT
 
 .contact {
     background-color: #252627;
-    padding-bottom: 5%;
-    width: 100%;
+    padding-bottom: 6%;
 
 }
 
@@ -565,100 +551,6 @@ CONTACT
         cursive;
 }
 
-.contact {
-    background-color: ;
-}
-
-/*
-==============================
-PORTFOLIO
-==============================
-*/
-
-.header-port {
-    min-height: 80px;
-    cursor: pointer;
-}
-
-.header-port .logo-port {
-    font-size: 3em;
-    text-transform: uppercase;
-    font-weight: 1200;
-    line-height: 80px;
-    float: left;
-    margin-left: 50px;
-
-}
-
-.header-port ul {
-    float: right;
-}
-
-.header-port ul li {
-    list-style: none;
-    display: inline-block;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    font-weight: 900;
-    padding: 0 20px;
-    line-height: 80px;
-    margin-right: 30px;
-
-}
-
-.header-port ul li:hover,
-.header-port ul .active {
-    background: rgb(195, 136, 230);
-}
-
-.port {
-    width: 100%;
-    padding: 10px;
-    margin-top: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-
-.thumb {
-    width: 24%;
-    min-width: 350px;
-    height: 400px;
-    text-align: center;
-    cursor: pointer;
-    padding: 10px;
-    margin: 1%;
-
-}
-
-.thumb img {
-    width: 320px;
-    height: 280px;
-    display: block;
-    object-position: top;
-    object-fit: cover;
-    align-items: center;
-}
-
-.thumb h4 {
-    font-size: 1.5rem;
-    font-weight: 900;
-    letter-spacing: 3px;
-    text-align: left;
-    line-height: 80px;
-    margin-left: 0;
-}
-
-.thumb h5 {
-    margin-top: 0px;
-    text-align: left;
-    font-family: 'Emilys Candy',
-        cursive;
-
-}
-
-
 /*
 ==============================
 RESUME
@@ -672,12 +564,7 @@ RESUME
     display: flex;
     flex-direction: column;
     justify-content: stretch;
-
-
-
 }
-
-
 
 /*
 ==============================
@@ -694,4 +581,8 @@ FOOTER
     padding-bottom: 1%;
     font-family: 'Emilys Candy',
         cursive;
+}
+
+.contact .card-desk {
+    margin-left: 0%;
 }
