--- a/src/components/pages/contact/contact.css
+++ b/src/components/pages/contact/contact.css
@@ -15,13 +15,13 @@
         cursive;
     font-size: large;
     color: #000;
-    /* background-color: #161623; */
+    background-color: #252627;
 
 }
 
 
 
-.body::before {
+/* .body::before {
     content: '';
     position: absolute;
     top: 0;
@@ -40,7 +40,7 @@
     width: 100%;
     height: 100%;
 
-}
+} */
 
 .containerLogin {
     position: relative;
@@ -72,7 +72,7 @@ span:hover {
 }
 
 .contentCard img {
-    width: 250px;
+    width: 200px;
     height: 200px;
 
 }
@@ -81,6 +81,16 @@ span:hover {
     margin-top: 10%;
 }
 
+.body h1 {
+    font-size: 6rem;
+    z-index: 0;
+    color: #a69cbe;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: 'Emilys Candy',
+        cursive;
+}
 
 .containerLogin .cardS {
     position: relative;
