--- a/src/components/pages/navbar/navbar.css
+++ b/src/components/pages/navbar/navbar.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap');
-
 ul {
     list-style-type: none;
 }
@@ -8,11 +6,73 @@ a {
     text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4 {
+    letter-spacing: 0.1rem;
+    text-transform: capitalize;
+    line-height: 1.25;
+    margin-bottom: 0.75rem;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.25rem;
+}
+
+h4 {
+    font-size: 0.875rem;
+}
+
+p {
+    margin-bottom: 1.25rem;
+    color: hsl(210, 22%, 49%);
+}
+
+@media screen and (min-width: 800px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 1.75rem;
+    }
+
+    h4 {
+        font-size: 1rem;
+    }
+
+    body {
+        font-size: 1rem;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+        line-height: 1;
+    }
+}
+
+/*  global classes */
+
+/* section */
 .section {
     width: 90vw;
     margin: 0 auto;
     max-width: 1170px;
-    ;
 }
 
 @media screen and (min-width: 992px) {
@@ -22,19 +82,12 @@ a {
 }
 
 /*
-============================== 
+=============== 
 Navbar
-==============================
+===============
 */
-
-.nav-header h3 {
-    font-family: 'Emilys Candy',
-        cursive;
-
-}
-
 nav {
-    background: #181818;
+    background: #0d0d0e;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -45,16 +98,32 @@ nav {
     padding: 1rem;
 }
 
-.nav-item {
-    color: hsl(209, 59%, 69%);
+.nav-toggle {
+    font-size: 1.5rem;
+    color: hsl(205, 78%, 60%);
+    background: transparent;
+    border-color: transparent;
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
 
-    font-size: 0.8rem;
+.nav-toggle:hover {
+    color: hsl(205, 86%, 17%);
+    transform: rotate(90deg);
+}
+
+.logo {
+    height: 40px;
+}
+
+.links a {
+    color: hsl(209, 34%, 30%);
+    font-size: 1rem;
+    text-transform: capitalize;
     letter-spacing: 0.1rem;
     display: block;
     padding: 0.5rem 1rem;
     transition: all 0.3s linear;
-    font-family: 'Emilys Candy',
-        cursive;
 }
 
 .links a:hover {
@@ -99,17 +168,31 @@ nav {
         height: auto !important;
     }
 
-    /* .links {
+    .links {
         display: flex;
-    } */
+    }
 
     .links a {
         padding: 0;
-        margin: 0 1rem;
+        margin: 0 0.5rem;
     }
 
     .links a:hover {
         padding: 0;
         background: transparent;
+    }
+
+    .social-icons {
+        display: flex;
+    }
+
+    .social-icons a {
+        margin: 0 0.5rem;
+        color: hsl(205, 78%, 60%);
+        transition: all 0.3s linear;
+    }
+
+    .social-icons a:hover {
+        color: hsl(205, 90%, 76%);
     }
 }
