--- a/src/components/pages/footer/Footer.css
+++ b/src/components/pages/footer/Footer.css
@@ -1,21 +1,14 @@
-/*
-==============================
-FOOTER
-==============================
-*/
-
 .footer {
-    text-align: center;
-    padding: 3px;
     background-color: #181818;
     color: rgb(194, 189, 181);
-    margin-top: 0%;
-    margin-bottom: 0%;
-    padding-bottom: 0%;
     font-family: 'Emilys Candy',
         cursive;
-}
+    margin-top: 0;
+    padding: 1rem;
+    position: flex;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
 
-.contact .card-desk {
-    margin-left: 0%;
 }
