fix responsive issue

--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -7,8 +7,8 @@ HOME
 
 .homeBody {
     background-color: #252627;
-    margin-bottom: 0px;
-    height: 100vh;
+    margin-bottom: 0rem;
+    height: 130vh;
 }
 
 .homeContainer {
